user changed to pupil (master) pretty stable commit till now

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_weight="0"
-            android:onClick="userLogin"
+            android:onClick="pupilLogin"
             android:text="Log In" />
 
         <com.facebook.login.widget.LoginButton
